fix overflow-x

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,6 @@
 
 * {
 	font-family: "Roboto", sans-serif;
-	margin: 0;
 	box-sizing: border-box;
 }
 
@@ -17,9 +16,9 @@ html {
 }
 
 body {
-	overflow-x: hidden;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 
 	.cursor {
 		position: fixed;
